App: Change printf to tfm_log_printf
Implement stdio output of NS USART and change the 'printf' in
non-secure App to 'tfm_log_printf'. Use 'tfm_log_printf' from
'interface' folder for the substitute.

Change-Id: I871ea999adb525879cc2f1e3183036feb6d1a671
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -68,11 +68,14 @@ if (NOT DEFINED TFM_PSA_API)
 	message(FATAL_ERROR "Incomplete build configuration: TFM_PSA_API is undefined.")
 endif()
 
+embedded_include_directories(PATH ${TFM_ROOT_DIR}/app ABSOLUTE)
+
 set(NS_APP_SRC "${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Config/RTX_Config.c"
 	"${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Source/rtx_lib.c"
 	"${APP_DIR}/main_ns.c"
 	"${APP_DIR}/tfm_integ_test.c"
 	"${APP_DIR}/os_wrapper_cmsis_rtos_v2.c"
+	"${TFM_ROOT_DIR}/interface/src/log/tfm_log_raw.c"
 	)
 
 if (NOT DEFINED TFM_MULTI_CORE_TOPOLOGY OR NOT TFM_MULTI_CORE_TOPOLOGY)
