Test: Add Crypto test for key access control
Adds a test for access control for keys in the Crypto service based on
partition ID. Uses the Secure Client 2 test partition to attempt to
destroy a key belonging to another partition.

Change-Id: I2f3dfd2dfca0a9f7e9391836b190862b1df5dc18
Signed-off-by: Jamie Fox <jamie.fox@arm.com>

--- a/test/test_services/tfm_secure_client_2/tfm_secure_client_2.yaml
+++ b/test/test_services/tfm_secure_client_2/tfm_secure_client_2.yaml
@@ -31,7 +31,8 @@
     }
   ],
   "dependencies": [
-    "TFM_ITS_GET"
+    "TFM_ITS_GET",
+    "TFM_CRYPTO"
   ],
   "linker_pattern": {
     "object_list": [
