Build: Check dependence deadlock
A Secure Partition cannot depend on one of its own RoT Services as the
chain of IPC requests will cause a deadlock in the firmware

Change-Id: I7508941944c57ab4ba37b83716698f5fc2104e7b
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/spm/tfm_spm_db.inc.template
+++ b/secure_fw/spm/tfm_spm_db.inc.template
@@ -143,6 +143,11 @@ uint32_t *ctx_stack_list[] =
 static int32_t dependencies_{{manifest.manifest.name}}[] =
 {
         {% for dependence in manifest.manifest.dependencies %}
+            {% for service in manifest.manifest.services %}
+                {% if dependence == service.name %}
+#error "Please DO NOT include SP's own RoT Service '{{dependence}}', which will cause a deadlock!"
+                {% endif %}
+            {% endfor %}
     {{dependence}}_SID,
         {% endfor %}
 };
