--- a/secure_fw/services/crypto/CMakeLists.txt
+++ b/secure_fw/services/crypto/CMakeLists.txt
@@ -28,8 +28,14 @@ set (ENABLE_CRYPTO ON)
 set (CRYPTO_ENGINE_MBEDTLS ON)
 
 if (CRYPTO_ENGINE_MBEDTLS)
-	set (MBEDTLS_CONFIG_FILE "tfm_mbedcrypto_config.h")
-	set (MBEDTLS_CONFIG_PATH "${PLATFORM_DIR}/common")
+	if (NOT DEFINED MBEDTLS_CONFIG_FILE)
+		set (MBEDTLS_CONFIG_FILE "tfm_mbedcrypto_config.h")
+	endif()
+
+	if (NOT DEFINED MBEDTLS_CONFIG_PATH)
+		set (MBEDTLS_CONFIG_PATH "${PLATFORM_DIR}/common")
+	endif()
+
 	#Define location of Mbed Crypto source, build, and installation directory.
 	get_filename_component(MBEDCRYPTO_SOURCE_DIR "${TFM_ROOT_DIR}/../mbed-crypto" ABSOLUTE)
 	set (MBEDCRYPTO_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/mbed-crypto/build")
