--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -123,6 +123,15 @@ LR_CODE S_CODE_START {
     }
 #endif
 
+#if defined(S_CODE_SRAM_ALIAS_BASE)
+    /* eFlash driver code that gets copied from Flash to SRAM */
+    ER_CODE_SRAM S_CODE_SRAM_ALIAS_BASE ALIGN 4 {
+        Driver_GFC100_EFlash.o (+RO)
+        gfc100_eflash_drv.o (+RO)
+        musca_b1_eflash_drv.o (+RO)
+    }
+#endif
+
     /**** Base address of secure data area */
     TFM_SECURE_DATA_START S_DATA_START {
     }
