Doc: Minor documentation fixes
This patch introduces a set of minor bug-fixes,
aimed at increasing the quality of the rendered
documentation

It also adds a new feature of exposing cmake
variables to the documentation.

* Exposed @SPHINXCFG_TFM_VERSION@ to .rst documents
  as |TFM_VERSION|
* Upgraded tfm_its_512_flash document to comply with
  the documentation guidelines
* Fixed a typo in tfm_build_instruction document
* Reworded the cryptocell-312-runtime readme file with
  valid links to the user-manual
* Added psoc64/security/keys/readme.rst to excluded
  document-list
* Fixed an external link referencing on readme.rst

Change-Id: Ic6406fb9b59ff25f964506675a24334beeaaa738
Signed-off-by: Galanakis, Minos <minos.galanakis@arm.com>

--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -1,6 +1,6 @@
 ﻿# -*- coding: utf-8 -*-
 #-------------------------------------------------------------------------------
-# Copyright (c) 2019, Arm Limited. All rights reserved.
+# Copyright (c) 2019-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -81,7 +81,8 @@ language = None
 # List of patterns, relative to source directory, that match files and
 # directories to ignore when looking for source files.
 # This pattern also affects html_static_path and html_extra_path .
-exclude_patterns = ['_build', 'Thumbs.db', '.DS_Store', 'readme.rst']
+exclude_patterns = ['_build', 'Thumbs.db', '.DS_Store', 'readme.rst',
+                    'platform/ext/target/cypress/psoc64/security/keys/readme.rst']
 
 # The name of the Pygments (syntax highlighting) style to use.
 pygments_style = 'sphinx'
@@ -130,6 +131,9 @@ def setup(app):
 # Output file base name for HTML help builder.
 htmlhelp_basename = 'TF-M doc'
 
+rst_prolog = """
+.. |TFM_VERSION| replace:: @SPHINXCFG_TFM_VERSION@
+"""
 
 # -- Options for LaTeX output ------------------------------------------------
 
