Build: Enable building TF-M with original MCUBoot
Enable building TF-M with the original MCUBoot (alongside the forked one
in the TF-M repository). Before building with the upstream MCUBoot repo,
it must be cloned into the TF-M base folder (into which the TF-M was
cloned previously) and the -DMCUBOOT_REPO=UPSTREAM option must be added
to the command line at the CMake configuration step.
The MCUBOOT_REPO option determines the repository from which it will use
the MCUBoot. By default it will use it from the TF-M repository.

Add description of how to build TF-M with upstream MCUBoot to the
documentation.

Change-Id: I2cfa55039943a9ac919156570120367d9603a816
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2017-2019, Arm Limited. All rights reserved.
+# Copyright (c) 2017-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -12,7 +12,9 @@ include("Common/BuildSys")
 
 add_subdirectory(secure_fw)
 add_subdirectory(app)
-add_subdirectory(bl2/ext/mcuboot)
+if (BL2)
+    add_subdirectory(bl2/ext/mcuboot)
+endif()
 
 #Define a top-level generic tfm project
 project(tfm LANGUAGES)
