Build: Compile QCBOR test suite togheter with the library
QCBOR encode/decode library and its test suite was built
in different places. Move them to the same CMake file
to increase transparency and reduce the include path for
test application.

Change-Id: I645f4e8d4f1e5fb06aa72c00f8fd547a527ba110
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -151,10 +151,7 @@ if (TFM_BUILD_IN_SPE)
 	#to hold the compiled tfm_qcbor files.
 	add_library(tfm_secure_tests STATIC ${ALL_SRC_C} ${ALL_SRC_C_S})
 	if (ENABLE_ATTESTATION_SERVICE_TESTS)
-		target_sources(tfm_secure_tests PRIVATE $<TARGET_OBJECTS:tfm_t_cose_verify>)
-	endif()
-	if (ENABLE_ATTESTATION_SERVICE_TESTS OR ENABLE_QCBOR_TESTS)
-		target_sources(tfm_secure_tests PRIVATE $<TARGET_OBJECTS:tfm_qcbor_decode>)
+		target_sources(tfm_secure_tests PRIVATE $<TARGET_OBJECTS:tfm_t_cose_verify> $<TARGET_OBJECTS:tfm_qcbor_decode>)
 	endif()
 
 	#Set common compiler and linker flags
