--- a/lib/ext/qcbor/CMakeLists.txt
+++ b/lib/ext/qcbor/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2019, Arm Limited. All rights reserved.
+# Copyright (c) 2019-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -36,16 +36,29 @@ list(APPEND ALL_SRC_C_DECODE
 	"${QCBOR_DIR}/src/UsefulBuf.c"
 	)
 
+#Append all our source files to global lists.
+list(APPEND ALL_SRC_C_TEST
+	"${QCBOR_DIR}/test/float_tests.c"
+	"${QCBOR_DIR}/test/half_to_double_from_rfc7049.c"
+	"${QCBOR_DIR}/test/qcbor_decode_tests.c"
+	"${QCBOR_DIR}/test/qcbor_encode_tests.c"
+	"${QCBOR_DIR}/test/run_tests.c"
+	"${QCBOR_DIR}/test/UsefulBuf_Tests.c"
+	)
+
 #Setting include directories
 embedded_include_directories(PATH ${QCBOR_DIR}/inc ABSOLUTE)
 
 #Specify what we build (for the QCBOR, build as an object library)
 add_library(tfm_qcbor_encode OBJECT ${ALL_SRC_C_ENCODE})
 add_library(tfm_qcbor_decode OBJECT ${ALL_SRC_C_DECODE})
+add_library(tfm_qcbor_test   OBJECT ${ALL_SRC_C_TEST})
 
 #Set common compiler flags
 config_setting_shared_compiler_flags(tfm_qcbor_encode)
 config_setting_shared_compiler_flags(tfm_qcbor_decode)
+config_setting_shared_compiler_flags(tfm_qcbor_test)
 
 embedded_project_end(tfm_qcbor_encode)
 embedded_project_end(tfm_qcbor_decode)
+embedded_project_end(tfm_qcbor_test)
