Build: Enable linking with PSA FF compliance tests in NS and S ELF
This change modifies the build system to support linking
the PSA FF compliance test static libraries at secure and
non-secure side both.

Signed-off-by: Jaykumar Pitambarbhai Patel <jaykumar.pitambarbhaipatel@arm.com>
Change-Id: I5ba925752afbe9f5a15f8df4ae12e44e712435a9

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -275,10 +275,6 @@ function(set_up_app_build)
 	target_link_libraries(${EXE_NAME} "${RTX_LIB_PATH}")
 
 	#Add the PSA API compliance test libraries
-	if(NOT DEFINED PSA_API_TEST_BUILD_PATH)
-		#If not specified, assume it's the default build folder checked out at the same level of TFM root dir
-		set(PSA_API_TEST_BUILD_PATH "${TFM_ROOT_DIR}/../psa-arch-tests/api-tests/BUILD")
-	endif()
 	if(PSA_API_TEST_NS)
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/val/val_nspe.a")
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/platform/pal_nspe.a")
@@ -294,6 +290,9 @@ function(set_up_app_build)
 	endif()
 	if(PSA_API_TEST_NS AND PSA_API_TEST_ATTESTATION)
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/dev_apis/initial_attestation/test_combine.a")
+	endif()
+	if(PSA_API_TEST_NS AND PSA_API_TEST_IPC)
+		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/ff/ipc/test_combine.a")
 	endif()
 
 	if(NOT DEFINED PLATFORM_LINK_INCLUDES)
