Build: Enable HW rollback protection with UPSTREAM
Modify the build system (by removing restrictions) to allow HW rollback
protection when the 'UPSTREAM' MCUboot repository is selected as MCUboot
v1.6.0 (current default bootloader) already includes this feature.

Change-Id: I5ee1c347986275e3da18960801b7503e8f3b4768
Signed-off-by: David Vincze <david.vincze@linaro.org>

--- a/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
+++ b/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
@@ -47,7 +47,7 @@ extern "C" {
 #cmakedefine MCUBOOT_RAM_LOADING
 
 #cmakedefine MCUBOOT_HW_KEY
-#cmakedefine MCUBOOT_USE_UPSTREAM
+#cmakedefine MCUBOOT_HW_ROLLBACK_PROT
 
 /*
  * Cryptographic settings
