Attest: Align attestation service to new COSE library
T_COSE library implementation was updated. Update attestation
service and test suite to be aligned with new t_cose library API.

Change-Id: Iccc73f317c6451f692028bc199e04588fb9b9321
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/secure_fw/services/initial_attestation/CMakeLists.txt
+++ b/secure_fw/services/initial_attestation/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -34,7 +34,7 @@ if (NOT TARGET tfm_qcbor_encode)
 endif()
 
 if (NOT TARGET tfm_t_cose_sign)
-	add_subdirectory(${TFM_ROOT_DIR}/lib/t_cose ${CMAKE_CURRENT_BINARY_DIR}/t_cose)
+	add_subdirectory(${TFM_ROOT_DIR}/lib/ext/t_cose ${CMAKE_CURRENT_BINARY_DIR}/t_cose)
 endif()
 
 #Specify what we build (for the initial attestation service, build as a static library)
