Build: Fix install directory for tfm_crypto_defs.h
Moves this header to the top level include directory as it is not a PSA
header.

Change-Id: Iadb472434eb17589de6dd0758d261409b218598d
Signed-off-by: Jamie Fox <jamie.fox@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -412,8 +412,9 @@ function(set_up_secure_fw_build)
 							${INTERFACE_INC_DIR}/psa/crypto_struct.h
 							${INTERFACE_INC_DIR}/psa/crypto_types.h
 							${INTERFACE_INC_DIR}/psa/crypto_values.h
-							${INTERFACE_INC_DIR}/tfm_crypto_defs.h
 				DESTINATION ${EXPORT_INC_DIR}/psa)
+		install(FILES       ${INTERFACE_INC_DIR}/tfm_crypto_defs.h
+				DESTINATION ${EXPORT_INC_DIR})
 		if (TFM_PSA_API)
 			install(FILES       ${INTERFACE_SRC_DIR}/tfm_crypto_ipc_api.c
 					DESTINATION ${EXPORT_SRC_DIR})
