Platform: Added a Non-Volatile counters service
This patch introduces a new platform service exposing
the non-volatile counters. Secure partitions can use
this secure API to access the initialisation,
increment and read operations on the nv counters,
by setting "TFM_SP_PLATFORM_NV_COUNTER" as a dependency.

Change-Id: Ia564e24417dfd9bb95cc61634dbbea17caa5974c
Signed-off-by: Minos Galanakis <minos.galanakis@arm.com>

--- a/secure_fw/services/platform/tfm_platform.yaml
+++ b/secure_fw/services/platform/tfm_platform.yaml
@@ -28,6 +28,14 @@
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "STRICT"
+     },
+     {
+       "name": "TFM_SP_PLATFORM_NV_COUNTER",
+       "signal": "PLATFORM_SP_NV_COUNTER_SIG",
+       "sid": "0x00000042",
+       "non_secure_clients": false,
+       "version": 1,
+       "version_policy": "STRICT"
      }
   ],
   "secure_functions": [
@@ -46,6 +54,20 @@
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
-     }
+     },
+     {
+       "name": "TFM_SP_PLATFORM_NV_COUNTER_READ",
+       "signal": "PLATFORM_SP_NV_COUNTER_READ",
+       "non_secure_clients": false,
+       "minor_version": 1,
+       "minor_policy": "STRICT"
+      },
+      {
+        "name": "TFM_SP_PLATFORM_NV_COUNTER_INCREMENT",
+        "signal": "PLATFORM_SP_NV_COUNTER_INCREMENT",
+        "non_secure_clients": false,
+        "minor_version": 1,
+        "minor_policy": "STRICT"
+       }
   ]
 }
