--- a/secure_fw/services/secure_storage/tfm_secure_storage.yaml
+++ b/secure_fw/services/secure_storage/tfm_secure_storage.yaml
@@ -90,6 +90,7 @@
     "TFM_ITS_SET",
     "TFM_ITS_GET",
     "TFM_ITS_GET_INFO",
-    "TFM_ITS_REMOVE"
+    "TFM_ITS_REMOVE",
+    "TFM_SP_PLATFORM_NV_COUNTER"
   ]
 }
