Build: Added support for IAR toolchain to psoc64
- Added conditional compilation of subnormal float tests for M0+
  with IAR, as the IAR toolchain does not handle this for these
  targets.

- Successfully runs the supported regression tests, but fails the NaN
  QCBOR tests due to the tests not following the Arm ABI.

- Verified on psoc64

Change-Id: I483507ad2843b6745e3c1c845c939c80d90aa19d
Signed-off-by: TTornblom <thomas.tornblom@iar.com>

--- a/platform/ext/common/iar/tfm_common_s.icf.template
+++ b/platform/ext/common/iar/tfm_common_s.icf.template
@@ -33,7 +33,7 @@ define block TFM_UNPRIV_CODE with alignment = 32 {
        ro object platform_retarget_dev.o,
        ro object device_definition.o,
        section SFN,
-       ro section .rodata object tfm_its_secure_api.o,
+       ro section .rodata object tfm_*_secure_api.o,
        ro object *7M_tl*.a,
        ro object *libtfmsprt.a
        };
