--- a/lib/ext/t_cose/CMakeLists.txt
+++ b/lib/ext/t_cose/CMakeLists.txt
@@ -55,25 +55,31 @@ if (NOT SYMMETRIC_INITIAL_ATTESTATION)
 		)
 endif()
 
-list(APPEND ALL_SRC_C_TEST
-	"${T_COSE_DIR}/test/run_tests.c"
-	"${T_COSE_DIR}/test/t_cose_make_psa_test_key.c"
-	"${T_COSE_DIR}/test/t_cose_make_test_messages.c"
-	"${T_COSE_DIR}/test/t_cose_sign_verify_test.c"
-	"${T_COSE_DIR}/test/t_cose_test.c"
-	)
+if (ENABLE_T_COSE_TESTS)
+	list(APPEND ALL_SRC_C_TEST
+		"${T_COSE_DIR}/test/run_tests.c"
+		"${T_COSE_DIR}/test/t_cose_make_psa_test_key.c"
+		"${T_COSE_DIR}/test/t_cose_make_test_messages.c"
+		"${T_COSE_DIR}/test/t_cose_sign_verify_test.c"
+		"${T_COSE_DIR}/test/t_cose_test.c"
+		)
+endif()
 
 #Setting include directories
 embedded_include_directories(PATH ${T_COSE_DIR}/inc ABSOLUTE)
 embedded_include_directories(PATH ${T_COSE_DIR}/../qcbor/inc ABSOLUTE)
 embedded_target_include_directories(TARGET tfm_t_cose_sign   PATH ${T_COSE_DIR}/src ABSOLUTE APPEND)
 embedded_target_include_directories(TARGET tfm_t_cose_verify PATH ${T_COSE_DIR}/src ABSOLUTE APPEND)
-embedded_target_include_directories(TARGET tfm_t_cose_test   PATH ${T_COSE_DIR}/src ABSOLUTE APPEND)
+if (ENABLE_T_COSE_TESTS)
+	embedded_target_include_directories(TARGET tfm_t_cose_test PATH ${T_COSE_DIR}/src ABSOLUTE APPEND)
+endif()
 
 #Specify what we build (t_cose_sign and t_cose_verify build as an object library)
 add_library(tfm_t_cose_sign   OBJECT ${ALL_SRC_C_SIGN})
 add_library(tfm_t_cose_verify OBJECT ${ALL_SRC_C_VERIFY})
-add_library(tfm_t_cose_test   OBJECT ${ALL_SRC_C_TEST})
+if (ENABLE_T_COSE_TESTS)
+	add_library(tfm_t_cose_test OBJECT ${ALL_SRC_C_TEST})
+endif()
 
 #Setting target specific defines
 
@@ -97,7 +103,9 @@ endif()
 
 embedded_set_target_compile_defines(TARGET tfm_t_cose_sign   LANGUAGE C DEFINES ${T_COSE_COMPILE_TIME_CONFIG} APPEND)
 embedded_set_target_compile_defines(TARGET tfm_t_cose_verify LANGUAGE C DEFINES ${T_COSE_COMPILE_TIME_CONFIG} APPEND)
-embedded_set_target_compile_defines(TARGET tfm_t_cose_test   LANGUAGE C DEFINES ${T_COSE_COMPILE_TIME_CONFIG} APPEND)
+if (ENABLE_T_COSE_TESTS)
+	embedded_set_target_compile_defines(TARGET tfm_t_cose_test LANGUAGE C DEFINES ${T_COSE_COMPILE_TIME_CONFIG} APPEND)
+endif()
 
 if (DEFINED CMSE_FLAGS)
 	embedded_set_target_compile_flags(TARGET tfm_t_cose_sign   LANGUAGE C APPEND FLAGS ${CMSE_FLAGS})
@@ -108,8 +116,12 @@ endif()
 #Set common compiler flags
 config_setting_shared_compiler_flags(tfm_t_cose_sign)
 config_setting_shared_compiler_flags(tfm_t_cose_verify)
-config_setting_shared_compiler_flags(tfm_t_cose_test)
+if (ENABLE_T_COSE_TESTS)
+	config_setting_shared_compiler_flags(tfm_t_cose_test)
+endif()
 
 embedded_project_end(tfm_t_cose_sign)
 embedded_project_end(tfm_t_cose_verify)
-embedded_project_end(tfm_t_cose_test)
+if (ENABLE_T_COSE_TESTS)
+	embedded_project_end(tfm_t_cose_test)
+endif()
