COSE: Add verification routine of COSE_Mac0
Add verification routine of COSE_Mac0 message structure in
t_cose.
Move the definitions of structure t_cose_parameters and some flags
from t_cose_sign1_verify.h to t_cose_common.h. Thus COSE_Mac0
verification can share those definitions.

Also add HMAC verification functions to verify the tag in
COSE_Mac0.

Change-Id: Icfb69342f183739852ccff101c6fbf8d00395d85
Signed-off-by: David Hu <david.hu@arm.com>

--- a/lib/ext/t_cose/CMakeLists.txt
+++ b/lib/ext/t_cose/CMakeLists.txt
@@ -46,13 +46,13 @@ endif()
 list(APPEND ALL_SRC_C_VERIFY
 	"${T_COSE_DIR}/src/t_cose_util.c"
 	"${T_COSE_DIR}/src/t_cose_parameters.c"
+	"${T_COSE_DIR}/crypto_adapters/t_cose_psa_crypto.c"
 	)
 
-if (NOT SYMMETRIC_INITIAL_ATTESTATION)
-	list(APPEND ALL_SRC_C_VERIFY
-		 "${T_COSE_DIR}/src/t_cose_sign1_verify.c"
-		 "${T_COSE_DIR}/crypto_adapters/t_cose_psa_crypto.c"
-		)
+if (SYMMETRIC_INITIAL_ATTESTATION)
+	list(APPEND ALL_SRC_C_VERIFY "${T_COSE_DIR}/src/t_cose_mac0_verify.c")
+else()
+	list(APPEND ALL_SRC_C_VERIFY "${T_COSE_DIR}/src/t_cose_sign1_verify.c")
 endif()
 
 if (ENABLE_T_COSE_TESTS)
