SST: Move the SST partition to Application Root Of Trust
Migrate the Protected Storage (SST) partition from
PSA RoT to Application RoT, and configure the
flash peripherals for unpriviledge secure access.

Change-Id: I0306d432448e5cb551a0c3b3d05ecb7098ad4e54
Signed-off-by: Raef Coles <raef.coles@arm.com>
Signed-off-by: Minos Galanakis <minos.galanakis@arm.com>

--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -24,6 +24,9 @@
       "linker_pattern": {
         "library_list": [
            "*tfm_storage*"
+         ],
+         "object_list": [
+           "*test_sst_nv_counters.*",
          ]
       }
     },
