--- a/secure_fw/services/secure_storage/tfm_secure_storage.yaml
+++ b/secure_fw/services/secure_storage/tfm_secure_storage.yaml
@@ -8,7 +8,7 @@
 {
   "psa_framework_version": 1.0,
   "name": "TFM_SP_STORAGE",
-  "type": "PSA-ROT",
+  "type": "APPLICATION-ROT",
   "priority": "NORMAL",
   "entry_point": "tfm_sst_req_mngr_init",
   "stack_size": "0x800",
