--- a/test/test_services/tfm_secure_client_service/tfm_test_client_service.yaml
+++ b/test/test_services/tfm_secure_client_service/tfm_test_client_service.yaml
@@ -11,7 +11,7 @@
   "type": "PSA-ROT",
   "priority": "NORMAL",
   "entry_point": "tfm_secure_client_service_init",
-  "stack_size": "0x0C80",
+  "stack_size": "0x0D00",
   "mmio_regions": [
     {
       "name": "TFM_PERIPHERAL_STD_UART",
