Build: Added more targets  for IAR builds
- Added AN519, AN521, AN524, AN539 and SSE-200_AWS targets.

- Verified on: AN519, AN521, AN524, AN539, Musca A.

- SSE-200AWS builds but is untested due to lack of HW.

- Musca B1 and Musca S1 not yet supported due to lack of HW.

- All targets fails the NaN QCBOR tests due to the tests not
  following the Arm ABI.

Change-Id: I422ed7a85e09f895d781309d17166b81be954943
Signed-off-by: TTornblom <thomas.tornblom@iar.com>

--- a/platform/ext/common/iar/tfm_common_s.icf.template
+++ b/platform/ext/common/iar/tfm_common_s.icf.template
@@ -34,6 +34,7 @@ define block TFM_UNPRIV_CODE with alignment = 32 {
        ro object device_definition.o,
        section SFN,
        ro section .rodata object tfm_*_secure_api.o,
+       ro object *6M_tl*.a,
        ro object *7M_tl*.a,
        ro object *libtfmsprt.a
        };
