Tools: Add linker_pattern support to manifest list file
This change allows the PSA test suite partition manifest
parsing without any error for undefined linker_pattern
in manifest file as the linker_pattern support is now
added to manifest list file.

And move linker_pattern field from manifest to manifest_list
file for the existing SP manifest files.

Signed-off-by: Jaykumar Pitambarbhai Patel <jay08ec71@yahoo.com>
Change-Id: I85bb540feb100e494287cb845084b0026b04ace4

--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -52,13 +52,13 @@ LR_CODE S_CODE_START {
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
     {{manifest.manifest.name}}_LINKER +0 ALIGN 32 {
-    {% if manifest.manifest.linker_pattern.library_list %}
-        {% for pattern in manifest.manifest.linker_pattern.library_list %}
+    {% if manifest.attr.linker_pattern.library_list %}
+        {% for pattern in manifest.attr.linker_pattern.library_list %}
         {{pattern}} (+RO)
         {% endfor %}
     {% endif %}
-    {% if manifest.manifest.linker_pattern.object_list %}
-        {% for pattern in manifest.manifest.linker_pattern.object_list %}
+    {% if manifest.attr.linker_pattern.object_list %}
+        {% for pattern in manifest.attr.linker_pattern.object_list %}
         {{pattern}} (+RO)
         {% endfor %}
     {% endif %}
@@ -91,13 +91,13 @@ LR_CODE S_CODE_START {
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
     {{manifest.manifest.name}}_LINKER +0 ALIGN 32 {
-    {% if manifest.manifest.linker_pattern.library_list %}
-        {% for pattern in manifest.manifest.linker_pattern.library_list %}
+    {% if manifest.attr.linker_pattern.library_list %}
+        {% for pattern in manifest.attr.linker_pattern.library_list %}
         {{pattern}} (+RO)
         {% endfor %}
     {% endif %}
-    {% if manifest.manifest.linker_pattern.object_list %}
-        {% for pattern in manifest.manifest.linker_pattern.object_list %}
+    {% if manifest.attr.linker_pattern.object_list %}
+        {% for pattern in manifest.attr.linker_pattern.object_list %}
         {{pattern}} (+RO)
         {% endfor %}
     {% endif %}
@@ -179,13 +179,13 @@ LR_CODE S_CODE_START {
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
     {{manifest.manifest.name}}_LINKER_DATA +0 ALIGN 32 {
-    {% if manifest.manifest.linker_pattern.library_list %}
-        {% for pattern in manifest.manifest.linker_pattern.library_list %}
+    {% if manifest.attr.linker_pattern.library_list %}
+        {% for pattern in manifest.attr.linker_pattern.library_list %}
         {{pattern}} (+RW +ZI)
         {% endfor %}
     {% endif %}
-    {% if manifest.manifest.linker_pattern.object_list %}
-        {% for pattern in manifest.manifest.linker_pattern.object_list %}
+    {% if manifest.attr.linker_pattern.object_list %}
+        {% for pattern in manifest.attr.linker_pattern.object_list %}
         {{pattern}} (+RW +ZI)
         {% endfor %}
     {% endif %}
@@ -262,13 +262,13 @@ LR_CODE S_CODE_START {
 #ifdef {{manifest.attr.conditional}}
     {% endif %}
     {{manifest.manifest.name}}_LINKER_DATA +0 ALIGN 32 {
-    {% if manifest.manifest.linker_pattern.library_list %}
-        {% for pattern in manifest.manifest.linker_pattern.library_list %}
+    {% if manifest.attr.linker_pattern.library_list %}
+        {% for pattern in manifest.attr.linker_pattern.library_list %}
         {{pattern}} (+RW +ZI)
         {% endfor %}
     {% endif %}
-    {% if manifest.manifest.linker_pattern.object_list %}
-        {% for pattern in manifest.manifest.linker_pattern.object_list %}
+    {% if manifest.attr.linker_pattern.object_list %}
+        {% for pattern in manifest.attr.linker_pattern.object_list %}
         {{pattern}} (+RW +ZI)
         {% endfor %}
     {% endif %}
