--- a/secure_fw/services/internal_trusted_storage/tfm_internal_trusted_storage.yaml
+++ b/secure_fw/services/internal_trusted_storage/tfm_internal_trusted_storage.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2019, Arm Limited. All rights reserved.
+# Copyright (c) 2019-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -70,10 +70,5 @@
     "version": 1,
     "version_policy": "STRICT"
    }
-  ],
-  "linker_pattern": {
-    "library_list": [
-      "*tfm_internal_trusted_storage*"
-    ]
-  }
+  ]
 }
