--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -20,7 +20,12 @@
       "conditional": "TFM_PARTITION_SECURE_STORAGE",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 256
+      "pid": 256,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_storage*"
+         ]
+      }
     },
     {
       "name": "TF-M Internal Trusted Storage Service",
@@ -31,7 +36,12 @@
       "conditional": "TFM_PARTITION_INTERNAL_TRUSTED_STORAGE",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 257
+      "pid": 257,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_internal_trusted_storage*"
+         ]
+      }
     },
     {
       "name": "TFM Audit Log Service",
@@ -42,7 +52,12 @@
       "conditional": "TFM_PARTITION_AUDIT_LOG",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 258
+      "pid": 258,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_audit*"
+         ]
+      }
     },
     {
       "name": "TFM Crypto Service",
@@ -53,7 +68,12 @@
       "conditional": "TFM_PARTITION_CRYPTO",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 259
+      "pid": 259,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_crypto*"
+         ]
+      }
     },
     {
       "name": "TFM Platform Service",
@@ -64,7 +84,12 @@
       "conditional": "TFM_PARTITION_PLATFORM",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 260
+      "pid": 260,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_platform*"
+         ]
+      }
     },
     {
       "name": "TFM Initial Attestation Service",
@@ -75,7 +100,12 @@
       "conditional": "TFM_PARTITION_INITIAL_ATTESTATION",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 261
+      "pid": 261,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_attest*"
+         ]
+      }
     },
     {
       "name": "TFM Core Test Service",
@@ -86,7 +116,12 @@
       "conditional": "TFM_PARTITION_TEST_CORE",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 262
+      "pid": 262,
+      "linker_pattern": {
+        "object_list": [
+           "*tfm_ss_core_test.*"
+         ]
+      }
     },
     {
       "name": "TFM Core Test Service 2",
@@ -97,7 +132,12 @@
       "conditional": "TFM_PARTITION_TEST_CORE",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 263
+      "pid": 263,
+      "linker_pattern": {
+        "object_list": [
+           "*tfm_ss_core_test_2.*"
+         ]
+      }
     },
     {
       "name": "TFM Secure Client Service",
@@ -108,7 +148,20 @@
       "conditional": "TFM_PARTITION_TEST_SECURE_SERVICES",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 264
+      "pid": 264,
+      "linker_pattern": {
+        "object_list": [
+          "*tfm_secure_client_service.*",
+          "*test_framework*",
+          "*uart_stdout.*",
+          "*Driver_USART.*",
+          "*arm_uart_drv.*",   # MPS2-AN521, MPS2-AN519
+          "*uart_pl011_drv.*", # Musca-A, Musca-B1
+          "*uart_cmsdk_drv*",  # MPS3-AN524
+          "*secure_suites.*",
+          "*attestation_s_interface_testsuite.*"
+         ]
+      }
     },
     {
       "name": "TFM IPC Service Test",
@@ -119,7 +172,12 @@
       "conditional": "TFM_PARTITION_TEST_CORE_IPC",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 265
+      "pid": 265,
+      "linker_pattern": {
+        "object_list": [
+           "*ipc_service_test.*"
+         ]
+      }
     },
     {
       "name": "TFM IPC Client Service",
@@ -130,7 +188,12 @@
       "conditional": "TFM_PARTITION_TEST_CORE_IPC",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 266
+      "pid": 266,
+      "linker_pattern": {
+        "object_list": [
+           "*ipc_client_test.*"
+         ]
+      }
     },
     {
       "name": "TFM IRQ Test Service 1",
@@ -141,7 +204,13 @@
       "conditional": "TFM_ENABLE_IRQ_TEST",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 267
+      "pid": 267,
+      "linker_pattern": {
+        "object_list": [
+           "*tfm_irq_test_service_1.*",
+           "*timer_cmsdk*",
+         ]
+      }
     },
     {
       "name": "TF-M SST Test Service",
@@ -152,7 +221,12 @@
       "conditional": "TFM_PARTITION_TEST_SST",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 268
+      "pid": 268,
+      "linker_pattern": {
+        "object_list": [
+           "*tfm_sst_test_service.*"
+         ]
+      }
     },
     {
       "name": "TF-M Secure Client 2 Service",
@@ -163,7 +237,12 @@
       "conditional": "TFM_PARTITION_TEST_SECURE_SERVICES",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 269
+      "pid": 269,
+      "linker_pattern": {
+        "object_list": [
+           "*tfm_secure_client_2.*"
+         ]
+      }
     },
     {
       "name": "TFM Multi-core Test",
@@ -174,7 +253,12 @@
       "conditional": "TFM_MULTI_CORE_TEST",
       "version_major": 0,
       "version_minor": 1,
-      "pid": 270
+      "pid": 270,
+      "linker_pattern": {
+        "object_list": [
+           "*multi_core_test.*"
+         ]
+      }
     }
   ]
 }
